fix: starting to customize theme

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,9 +15,9 @@ html[data-theme="light"] {
 html[data-theme="dark"] {
   --background: #212737;
   --foreground: #eaedf3;
-  --accent: #ff6b01;
+  --accent: #00c851;
   --muted: #343f60bf;
-  --border: #ab4b08;
+  --border: #0a7c2a;
 }
 
 @theme inline {
