feat: remove the progress bar

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -180,7 +180,7 @@ const nextPost =
     // Append the progress container to the document body or any other desired parent element
     document.body.appendChild(progressContainer);
   }
-  createProgressBar();
+  // createProgressBar(); // Uncomment to enable progress bar
 
   /** Update the progress bar
    *  when user scrolls */
