fix: correct typo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
       </a>
 
       <p>
-        I am a lead devops engineer, currently leaving in Hong Kong. <br />
+        Lead devops engineer, currently living in Hong Kong. <br />
         Sharing some of my journey playing around with computers.
       </p>
       <p class="mt-4">
