fix: correct intro link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,9 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         Read the blog posts or check
         <LinkButton
           class="underline decoration-dashed underline-offset-4 hover:text-accent"
-          href="https://github.com/satnaing/astro-paper#readme"
+          href="/about/"
         >
-          README
+          About
         </LinkButton> for more info.
       </p>
       {
