fix: cleanup the main description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,8 +43,8 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
       </a>
 
       <p>
-        Lead devops engineer, currently living in Hong Kong. <br />
-        Sharing some of my journey playing around with computers.
+        Lead devops engineer, currently living in Hong Kong. <br /><br />
+        Sharing some DevOps tips that I hope could benefit you.
       </p>
       <p class="mt-4">
         Read the blog posts or check
