--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 html[data-theme="light"] {
   --background: #fdfdfd;
   --foreground: #282728;
-  --accent: #006cac;
+  --accent: #00c851;
   --muted: #e6e6e6;
   --border: #ece9e9;
 }
